FELIX-5727: Refactor extension bundle support to allow for custom classloader appenders and to add extension bundles when loaded with java9 PlattformClassLoader.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/framework@1813111 13f79535-47bb-0310-9956-ffa450edef68